--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -3,17 +3,18 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextField?>
 <SplitPane dividerPositions="0.4" xmlns:fx = "http://javafx.com/fxml" fx:controller="sample.View">
     <TextArea editable="false" fx:id="logArea"/>
     <VBox>
         <Label text="От кого:"/>
-        <TextArea text="GudilinAC@gmail.com" prefRowCount="1" fx:id="from"/>
+        <TextField text="GudilinAC@gmail.com" fx:id="from"/>
         <Label text="Пароль"/>
-        <TextArea prefRowCount="1" fx:id="password"/>
+        <TextField fx:id="password"/>
         <Label text="Кому:"/>
-        <TextArea text="GudilinAC@gmail.com" prefRowCount="1" fx:id="to"/>
+        <TextField text="GudilinAC@gmail.com" fx:id="to"/>
         <Label text="Тема:"/>
-        <TextArea text="SMTP Test" prefRowCount="1" fx:id="topic"/>
+        <TextField text="SMTP Test" fx:id="topic"/>
         <Label text="Сообщение:"/>
         <TextArea text="fdsgsdgds" fx:id="text"/>
         <Label text="Прикрепить файлы:"/>
