--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
-<SplitPane dividerPositions="0.4" xmlns:fx = "http://javafx.com/fxml" fx:controller="sample.View">
+<SplitPane dividerPositions="0.4" xmlns:fx = "https://javafx.com/fxml" fx:controller="sample.View">
     <TextArea editable="false" fx:id="logArea"/>
     <VBox>
         <Label text="From:"/>
