--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -4,9 +4,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ScrollPane?>
 <SplitPane dividerPositions="0.4" xmlns:fx = "https://javafx.com/fxml" fx:controller="sample.View">
     <TextArea editable="false" fx:id="logArea"/>
-    <VBox>
+    <VBox fx:id="inputArea">
         <Label text="From:"/>
         <TextField text="GudilinAC@gmail.com" fx:id="from"/>
         <Label text="Password:"/>
@@ -18,7 +19,10 @@
         <Label text="Message:"/>
         <TextArea text="fdsgsdgds" fx:id="text"/>
         <Label text="Attach files:"/>
-        <TextArea fx:id="attachments" editable="false"/>
+        <ScrollPane hbarPolicy="NEVER" maxHeight="150">
+            <VBox fx:id="attachmentsArea">
+            </VBox>
+        </ScrollPane>
         <Button fx:id="chooseFileBtn" text="Attach" onAction="#attach"/>
         <Button fx:id="sendBtn" text="Send" onAction="#send"/>
     </VBox>
